--- a/src/app/shared/components/main-content-container/main-content-container.component.html
+++ b/src/app/shared/components/main-content-container/main-content-container.component.html
@@ -4,20 +4,13 @@
       <div>
         <div class="left-bar" class="maintenance-left-menu-container-item">
           <div class="maintenance-left-menu-container-holder">
-            <div
-              *ngFor="let menu of serviceSettings[0].menuOptions"
-              (click)="openMenuItemsList(menu, serviceSettings[0])"
-            >
+            <div *ngFor="let menu of serviceSettings[0].menuOptions"
+              (click)="openMenuItemsList(menu, serviceSettings[0])">
               <span tabindex="0" class="maintenance-left-menu-span">
                 <div>
-                  <div
-                    class="left-menu-item"
-                    matRipple
-                    [matRippleColor]="rippleEffectsColor"
-                    [routerLink]="['/' + serviceSettings[0].route, menu.route]"
-                    routerLinkActive="active"
-                    class="maintenance-left-menu-icon-text-representation"
-                  >
+                  <div class="left-menu-item" matRipple [matRippleColor]="rippleEffectsColor"
+                    [routerLink]="['/' + serviceSettings[0].route, menu.route]" routerLinkActive="active"
+                    class="maintenance-left-menu-icon-text-representation">
                     <i class="material-icons maintenance-left-menu-folder-icon">
                       folder
                     </i>
@@ -34,24 +27,21 @@
   <div class="maintenance-right-menu-container">
     <div class="maintenance-left-menu-container-div">
       <div *ngIf="isServiceOpened" class="row ml-1 mt-2">
-        <div
-          *ngFor="let menuItem of serviceSettings[0].menuOptions"
-          class="maintenance-left-menu-list-container"
-        >
+        <div *ngFor="let menuItem of serviceSettings[0].menuOptions" class="maintenance-left-menu-list-container">
           <div>
             <div class="maintenance-left-menu-list-item">
               <div class="title-div">
                 <span class="title">{{ menuItem.name }}</span>
-                <span
-                  style="color: rgba(0, 0, 0, 0.54); display: block; font-size: 14px;"
-                ></span>
+                <span style="color: rgba(0, 0, 0, 0.54); display: block; font-size: 14px;"></span>
               </div>
             </div>
             <div class="description">
               {{ serviceSettings[0].instruction }}
             </div>
             <div class="operation-div">
-              <button tabindex="0" type="button" class="operations-button">
+              <button tabindex="0" type="button" class="operations-button"
+                [routerLink]="['/' + serviceSettings[0].route, menuItem.route]"
+                (click)="openMenuItemsList(menuItem, serviceSettings[0])" [queryParams]="{ entryform: true }">
                 <div>
                   <div class="operations-container">
                     <span matRipple class="add-button">Add</span>
@@ -59,13 +49,9 @@
                   <span class="material-icons plus-button"></span>
                 </div>
               </button>
-              <button
-                [routerLink]="['/' + serviceSettings[0].route, menuItem.route]"
-                (click)="openMenuItemsList(menuItem, serviceSettings[0])"
-                tabindex="0"
-                type="button"
-                class="list-button"
-              >
+              <button [routerLink]="['/' + serviceSettings[0].route, menuItem.route]"
+                (click)="openMenuItemsList(menuItem, serviceSettings[0])" tabindex="0" type="button"
+                class="list-button">
                 <div>
                   <div class="list-div">
                     <span class="list-item">List</span>
@@ -80,6 +66,15 @@
       <div *ngIf="isListOpened" class="row ml-3">
         <div class="maintenance-left-menu-container-list">
           <router-outlet></router-outlet>
+        </div>
+      </div>
+    </div>
+    <div class="maintenance-left-menu-container-div">
+      <div *ngIf="isEntryform" class="row ml-1 mt-2">
+        <div class="maintenance-left-menu-list-container" style="width: 100% !important">
+          <!-- <p>Entry Form Is Going To Be Rendered Here</p> -->
+          <app-entry-form [formSetting]="serviceSettings" [formOptions]="menuOptions" style="width: 100% !important">
+          </app-entry-form>
         </div>
       </div>
     </div>
@@ -101,73 +96,54 @@
                           {{ homeSetting.name }}
                         </h1>
                         <div>
-                          <div
-                            *ngFor="let menuOption of homeSetting.menuOptions"
-                            class="maintenance-all-service-container"
-                          >
+                          <div *ngFor="let menuOption of homeSetting.menuOptions"
+                            class="maintenance-all-service-container">
                             <div>
-                              <div
-                                class="maintenance-all-service-container-title-div"
-                              >
+                              <div class="maintenance-all-service-container-title-div">
                                 <div>
                                   <span class="title">{{
                                     menuOption.name
-                                  }}</span
-                                  ><span class="separator"></span>
+                                  }}</span><span class="separator"></span>
                                 </div>
                               </div>
-                              <div
-                                class="maintenance-all-service-container-description-div"
-                              >
+                              <div class="maintenance-all-service-container-description-div">
                                 {{ homeSetting.instruction }}
                               </div>
-                              <div
-                                class="maintenance-all-service-container-operations"
-                              >
-                                <button
-                                  tabindex="0"
-                                  type="button"
-                                  class="button"
-                                >
+                              <div class="maintenance-all-service-container-operations">
+                                <button tabindex="0" type="button" class="button" [routerLink]="[
+                                    '/' + homeSetting.route,
+                                    menuOption.route
+                                  ]" (click)="
+                                    openMenuItemsList(
+                                      menuOption,
+                                      serviceSettings[0]
+                                    )
+                                  " [queryParams]="{ entryform: true }">
                                   <div>
                                     <div class="button-section">
                                       <div class="add-section"></div>
                                       <span class="add">Add</span>
                                     </div>
-                                    <span
-                                      class="material-icons"
-                                      color="rgba(0, 0, 0, 0.87)"
-                                      style="color: rgba(0, 0, 0, 0.87); position: relative; font-size: 24px; display: inline-block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
-                                      ></span
-                                    >
+                                    <span class="material-icons" color="rgba(0, 0, 0, 0.87)"
+                                      style="color: rgba(0, 0, 0, 0.87); position: relative; font-size: 24px; display: inline-block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"></span>
                                   </div>
                                 </button>
-                                <button
-                                  tabindex="0"
-                                  type="button"
-                                  class="button"
-                                  [routerLink]="[
+                                <button tabindex="0" type="button" class="button" [routerLink]="[
                                     '/' + homeSetting.route,
                                     menuOption.route
-                                  ]"
-                                  (click)="
+                                  ]" (click)="
                                     openMenuItemsList(
                                       menuOption,
                                       serviceSettings[0]
                                     )
-                                  "
-                                >
+                                  ">
                                   <div>
                                     <div class="button-section">
                                       <div class="list-section"></div>
                                       <span class="list">List</span>
                                     </div>
-                                    <span
-                                      class="material-icons"
-                                      color="rgba(0, 0, 0, 0.87)"
-                                      style="color: rgba(0, 0, 0, 0.87); position: relative; font-size: 24px; display: inline-block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"
-                                      ></span
-                                    >
+                                    <span class="material-icons" color="rgba(0, 0, 0, 0.87)"
+                                      style="color: rgba(0, 0, 0, 0.87); position: relative; font-size: 24px; display: inline-block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;"></span>
                                   </div>
                                 </button>
                               </div>
